Changes for 2.3.2

New features:
..F....... [ZBX-8278] prepared frontend for mbstring.internal_encoding ini option deprecation in php 5.6+ (Andrejs)
..F....... [ZBXNEXT-2222] added trigger status filter to the trigger overview page (Sasha)
..F....... [ZBX-8339] removed auto login/logout controls while editing guest user (Andrejs)
...G...... [ZBXNEXT-2203] added information on the reason log[] and logrt[] items became not supported (Andris,asaveljevs)
..F....... [ZBXNEXT-2254] added support for custom PostgreSQL schema to frontend and updated setup wizard (Krists)
..F....... [ZBX-8329] added styling for disabled buttons and inputs (Andrejs)
..F....... [ZBXNEXT-2344] added links on group names in "Web monitoring" widget (Ivo)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] changed frontend configuration wizard to store info in session instead of cookies (Andrejs)

Bug fixes:
A......... [ZBX-8315] fixed host interface import (from 1.8 and up) to correctly create new or reuse existing interfaces (Krists)
...G...... [ZBX-8248] fixed vfs.file.regexp, vfs.file.regmatch and web.page.regexp to handle carriage returns properly (Juris)
..F....... [ZBX-7459] fixed saving and editing of regular expression having trailing, leading, or repeating spaces (Andrejs)
..F....... [ZBX-1268] fixed log trigger expression editor to show only usable sorting arrows (Andrejs)
..F....... [ZBX-8285] fixed widget "History of events" and frontend messaging to use visible host names (Krists)
A.F....... [ZBX-8151] fixed XXE vulnerability on XML import using obsolete libxml versions; thanks to pnig0s@Freebuf for the report (Andrejs)
..F....... [ZBX-8354] removed period in caption for "Distribution of values for multiple periods" bar report (Andrejs)